# silverforge

./: .crucible.toml  .env.example  .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml  workers.yaml
.claude/: settings.local.json
factory/: _watcher.py  cli.py  coder.py  config.py  constitution.md  evaluator.py  evaluator_agent.py  gemini_review.py  github.py  hello_server.py  models.py  poller.py  repo_inspector.py  runner.py  server.py  session.py  slack-bridge-daemon.py  slack.py  slots.py  ssh.py  store.py  workers_default.yaml
scripts/: create-todo-issues.sh  rust-todo-crucible.toml  setup-rust-todo.sh
tasks/: fix-bridge-daemon-state.yaml  helix-test-target.yaml  hello-python.yaml  hello-rust.yaml  hello-world.yaml  rails-sample.yaml  rust-clamp.yaml  rust-divide.yaml  rust-fix.yaml  rust-interactive.yaml  rust-median.yaml  rust-todo-v2.yaml  slack-listen.yaml  todo.yaml
tests/: __init__.py  test_cli_serve.py  test_github.py  test_server.py
