[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "silverpond-factory"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "pydantic>=2",
    "pyyaml>=6",
    "questionary>=2",
    "slack-sdk>=3.19",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "httpx>=0.24",
]

[tool.setuptools.packages.find]
include = ["factory*"]

[project.scripts]
factory = "factory.cli:app"
