[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "silverpond-factory"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "pydantic>=2",
    "pyyaml>=6",
    "questionary>=2",
    "slack-sdk>=3.19",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["factory*"]

[tool.setuptools.package-data]
factory = ["workers_default.yaml"]

[project.scripts]
factory = "factory.cli:app"
